# nesemu

./: .gitignore  CMakeLists.txt  DOCS.md  Dockerfile  IDENTIFICATION.txt  README.md  README.txt  color_test_nosprites.nes  demo  presentation.url
.devcontainer/: devcontainer.env  devcontainer.json
.github/workflows/: ci.yml
app/: catch2_main.cpp  nesemu-cartridge.cpp  nesemu-cpu.cpp  nesemu.cpp  test-cartridge.cpp  test-cpu.cpp
include/: cartridge.hpp  controller.hpp  cpu.hpp  debugger.hpp  ppu.hpp  util.hpp
lib/cartridge/: cartridge.cpp
lib/controller/: controller.cpp
lib/cpu/: alu.cpp  cpu.cpp  decoder.cpp  instruction_meta.cpp  memory.cpp  mmap.cpp
lib/debugger/: debugger.cpp
lib/ppu/: ppu.cpp
lib/util/: logging.cpp  parsing.cpp  raii.cpp
scripts/: scrape-opcodes.py
